fix sample bib file name

--- a/inst/rmarkdown/templates/pdf_article/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pdf_article/skeleton/skeleton.Rmd
@@ -34,7 +34,7 @@ keywords:
   - Keyword B
   - Keyword C
   - Keyword D
-bibliography: jds-draft.bib
+bibliography: jds-sample.bib
 output: jds.rmd::pdf_article
 ---
 
