--- a/inst/rmarkdown/templates/pdf_article/resources/jds.cls
+++ b/inst/rmarkdown/templates/pdf_article/resources/jds.cls
@@ -10,14 +10,22 @@
 % options
 \newif\if@review
 \newif\if@inpress
+\newif\if@discussion
+\newif\if@chinese
 
+% defaults
 \@reviewtrue
 \@inpressfalse
+\@discussionfalse
+\@chinesefalse
 
+% only one of review and inpress can be true
 \DeclareOption{review}{\@reviewtrue \@inpressfalse}
 \DeclareOption{inpress}{\@reviewfalse \@inpresstrue}
+\DeclareOption{discussion}{\@discussiontrue}
+\DeclareOption{chinese}{\@chinesetrue \@discussiontrue}
 
-% from article.cls
+% other options from article.cls
 \DeclareOption{a4paper}
    {\setlength\paperheight {297mm}%
     \setlength\paperwidth  {210mm}}
@@ -56,20 +64,22 @@
 % end of \if@inpress
 \fi
 
+\if@discussion
+\gdef\disfirstpage{0}
+\fi
+
+\if@chinese
+\RequirePackage[UTF8]{ctex}
+\RequirePackage{xeCJK}
+\fi
+
 %% reference: biom.cls for short title
 \def\title{\@ifnextchar [{\@titletwo}{\@titleone}}
 \def\@titletwo[#1]#2{\gdef\@title{{#2}}\gdef\@shorttitle{{#1}}}
 \def\@titleone#1{\gdef\@title{{#1}}\gdef\@shorttitle{{#1}}}
 
-\newcommand\shorttitle{\gdef\@shorttitle}
-\newcommand\jdsreceived{\gdef\@jdsreceived}
-\newcommand\jdsaccepted{\gdef\@jdsaccepted}
-\shorttitle{}
-\jdsreceived{April 20, 2020}
-\jdsaccepted{April 28, 2020}
-
 %% revised maketitle of article.cls
-%% does not reset title etc
+%% without resetting title etc
 \renewcommand\maketitle{\par
   \begingroup
     \renewcommand\thefootnote{\@fnsymbol\c@footnote}%
@@ -77,36 +87,61 @@
     \long\def\@makefntext##1{\parindent 1em\noindent
             \hb@xt@1.8em{%
                 \hss\@textsuperscript{\normalfont\@thefnmark}}##1}%
-    \if@twocolumn
-      \ifnum \col@number=\@ne
-        \@maketitle
+    % \if@twocolumn
+    %   \ifnum \col@number=\@ne
+    %     \@maketitle
+    %   \else
+    %     \twocolumn[\@maketitle]%
+    %   \fi
+    % \else
+    \if@discussion
+      %% for discussion, only show first page header style once
+      \if\disfirstpage0
+        \thispagestyle{firstpage}
+        \gdef\disfirstpage{1}
       \else
-        \twocolumn[\@maketitle]%
+        \thispagestyle{fancy}
       \fi
     \else
       \newpage
-      % Prevents figures from going at top of page.
-      \global\@topnum\z@
-      \@maketitle
+      \thispagestyle{firstpage}
     \fi
-    \thispagestyle{plain}\@thanks
+    %% Prevents figures from going at top of page.
+    \global\@topnum\z@
+    \@maketitle
+    % \fi
+    \@thanks
   \endgroup
-  \setcounter{footnote}{0}%
-  % \global\let\thanks\relax
-  % \global\let\maketitle\relax
-  % \global\let\@maketitle\relax
-  % \global\let\@thanks\@empty
-  % \global\let\@author\@empty
-  % \global\let\@date\@empty
-  % \global\let\@title\@empty
-  % \global\let\title\relax
-  % \global\let\author\relax
-  % \global\let\date\relax
-  % \global\let\and\relax
+  %% reset all default counters
+  \setcounter{part}{0}
+  % \setcounter{chapter}{0}
+  \setcounter{section}{0}
+  \setcounter{subsection}{0}
+  \setcounter{subsubsection}{0}
+  \setcounter{paragraph}{0}
+  \setcounter{subparagraph}{0}
+  % \setcounter{page}{0}
+  \setcounter{figure}{0}
+  \setcounter{table}{0}
+  \setcounter{footnote}{0}
+  \setcounter{mpfootnote}{0}
+  % for the enumerate environment
+  \setcounter{enumi}{0}
+  \setcounter{enumii}{0}
+  \setcounter{enumiii}{0}
+  \setcounter{enumiv}{0}
+  % for the eqnarray environment
+  \setcounter{equation}{0}
+  %% reset thanks
+  \global\let\@thanks\@empty
 }
 \def\@maketitle{%
-  \newpage
-  \null
+  \if@discussion
+  % do nothing
+  \else
+    \newpage
+  \fi
+  % \null
   \vskip 2em%
   \begin{center}%
   \let \footnote \thanks
@@ -129,19 +164,42 @@
 {%
   % \@beginparpenalty\@lowpenalty
   \begin{center}%
-    \bfseries \abstractname
+    \ifnum\value{page}=1
+      \bfseries Abstract
+    \else
+      \bfseries \abstractname
+    \fi
     % \@endparpenalty
   \end{center}
 }
 {\par}
 
+\newcommand\keywordsname{
+  \gdef\@keywordsname{Keywords}
+  \if@chinese
+    \ifnum\value{page}>1
+    \gdef\@keywordsname{关键词}
+    \fi
+  \fi
+}
 \newenvironment{keywords}
-{\medskip\noindent\textbf{Keywords}\,\begin{itshape}}
+{\keywordsname\medskip\noindent\textbf{\@keywordsname}\,\begin{itshape}}
 {\end{itshape}}
+
+
+\newcommand\shorttitle{\gdef\@shorttitle}
+\newcommand\jdsreceived{\gdef\@jdsreceived}
+\newcommand\jdsaccepted{\gdef\@jdsaccepted}
+\shorttitle{}
+\jdsreceived{April, 2020}
+\jdsaccepted{May, 2020}
+
 
 % packages
 \RequirePackage{graphicx}
 \RequirePackage{color}
+
+%% need cm-super package for a better font looking
 \RequirePackage[T1]{fontenc}
 
 \RequirePackage[colorlinks=true,citecolor=blue]{hyperref}
@@ -153,28 +211,67 @@
 
 \RequirePackage[noblocks]{authblk}
 \setlength{\affilsep}{0.5em}
-\renewcommand\Authfont{\bf\scshape}
+\renewcommand\Authfont{\sc} %\bf\scshape}
 \renewcommand\Affilfont{\mdseries\slshape\small}
 
-% \RequirePackage{amsmath}
-% \numberwithin{equation}{section}
-
-% \RequirePackage{etoolbox}
-
 % for running head of author information
-\newcommand*{\runningauthors}{%
+\gdef\runningauthors{%
   \begingroup
-    \let\thanks\@gobble% ignore \thanks
-    \let\footnote\@gobble% ignore \footnote
-    \let\textsuperscript\@gobble% ignore protected \textsuperscript
-    \expandafter\let\csname textsuperscript \endcsname\@gobble
-    \let\Authfont\relax% do not use a special font
+  \let\thanks\@gobble% ignore \thanks
+  \let\footnote\@gobble% ignore \footnote
+  \let\textsuperscript\@gobble% ignore protected \textsuperscript
+  \expandafter\let\csname textsuperscript \endcsname\@gobble
+  \let\Authfont\relax% do not use a special font
+  \if@chinese
+    \def\Authand{和}
+  \else
     \def\Authand{ and }
-    \AB@authlist% show them all
+  \fi
+  \AB@authlist% show them all
   \endgroup
 }
 \newcommand\shortauthors{\gdef\@shortauthors}
 \shortauthors{\runningauthors}
+
+\if@discussion
+\RequirePackage{subfiles}
+\RequirePackage{bibunits}
+\defaultbibliographystyle{chicago}
+\RequirePackage{etoolbox}
+\AtEndPreamble{
+  \ifx\@shortauthors\empty
+    \shortauthors{\runningauthors}
+  \else
+  \relax
+  \fi
+}
+\def\jdsrule{
+  \newdimen\spaceleft
+  \spaceleft=\dimexpr\textheight-\pagetotal\relax
+  \if@chinese
+  \newpage
+  \if@chinese
+    \renewcommand\Authand{和}
+    \renewcommand\Authands{, 以及}
+  \fi
+  \else
+    \ifdim\spaceleft>20\baselineskip
+    \bigskip
+    \noindent\rule{\textwidth}{1.5pt}
+    \else
+    \newpage
+    \fi
+  \fi
+  % reset author and affiliation block
+  \global\let\AB@authors\@empty
+  \global\let\AB@authlist\@empty
+  \global\let\AB@affillist\@empty
+  \setcounter{authors}{0}
+}
+\fi
+
+% \RequirePackage{amsmath}
+% \numberwithin{equation}{section}
 
 \newcommand\jdsvolume{\gdef\@jdsvolume}
 \jdsvolume{xx}
@@ -194,7 +291,6 @@
 % defaults
 \title{My JDS Paper Title}
 \def\@shorttitle{\@title}
-\def\@shortauthor{\@author}
 
 %% define header and footer
 \RequirePackage{fancyhdr}
@@ -208,7 +304,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-\fancypagestyle{plain}{%
+\fancypagestyle{firstpage}{%
   \renewcommand{\headrulewidth}{0pt}%
   \fancyhf{}%
   \fancyhead[L]{\footnotesize {\scshape Journal of Data Science}
@@ -217,9 +313,9 @@
     \@jdsmonth\ \@jdsyear
   }
   \fancyhead[R]{\footnotesize DOI:\ \@jdsdoi\\}
-  \fancyfoot[L]{\thepage}% number of the first page
-  \fancyfoot[R]{\footnotesize
-    Received on \@jdsreceived; Accepted on \@jdsaccepted}
+  \fancyfoot[LE,RO]{\thepage}% number of the first page
+  \fancyfoot[RE,LO]{\footnotesize
+    Received \@jdsreceived; Accepted \@jdsaccepted}
 }
 
 \if@review
@@ -253,5 +349,7 @@
 \let\code\texttt
 \let\proglang\textsf
 \newcommand{\pkg}[1]{{\fontshape{it}\selectfont #1}}
+
+
 
 \endinput
