--- a/inst/rmarkdown/templates/pdf_article/resources/template.tex
+++ b/inst/rmarkdown/templates/pdf_article/resources/template.tex
@@ -54,7 +54,7 @@ $else$
 $endif$
 $endif$
 \bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
-\bibliographystyle{chicago}
+\bibliographystyle{jds}
 $endif$
 $endif$
 
