add code chunk example

--- a/inst/rmarkdown/templates/pdf_article/resources/template.tex
+++ b/inst/rmarkdown/templates/pdf_article/resources/template.tex
@@ -44,6 +44,10 @@ $if(short-authors)$
 \shortauthors{$short-authors$}
 $endif$
 
+$if(highlighting-macros)$
+$highlighting-macros$
+$endif$
+
 \usepackage[utf8]{inputenc}
 
 \title$if(short-title)$[$short-title$]$endif${$title$}
