--- a/inst/rmarkdown/templates/pdf_article/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pdf_article/skeleton/skeleton.Rmd
@@ -21,8 +21,9 @@ affiliation:
   - name: Institution C
     marker: 3
 classoption:
-  - letterpaper # or a4paper, etc.
-  - inpress     # or review
+  - letterpaper    # or a4paper, etc.
+  - inpress        # or review
+# - linenumber     # add line number for submission
 preamble: >
   \usepackage{amsfonts,amsmath,amssymb,amsthm}
   \usepackage{booktabs}
@@ -32,10 +33,12 @@ abstract: >
   patients with cystic fibrosis (CF). CF is a genetic disease that dramatically
   decreases life expectancy and quality.
 keywords:
-  - Keyword A
-  - Keyword B
-  - Keyword C
-  - Keyword D
+# alphabetical; excluding anything in the title already; lower case
+  - conditional distribution
+  - cystic fibrosis
+  - Kullback--Leibler divergence
+  - MCMC
+  - quantiles
 bibliography: jds-sample.bib
 output: jds.rmd::pdf_article
 ---
@@ -100,6 +103,14 @@ The document class \texttt{jds} provides several commands to decorate
 \item software package, such as \pkg{stats}, \pkg{utils}.
 \end{itemize}
 
+```{r example-code, comment = ""}
+## Dobson (1990) Page 93: Randomized Controlled Trial :
+counts <- c(18, 17, 15, 20, 10, 20, 25, 13, 12)
+outcome <- gl(3, 1, 9)
+treatment <- gl(3, 3)
+glm.D93 <- glm(counts ~ outcome + treatment, family = poisson())
+summary(glm.D93)
+```
 
 # Guide for Authors
 
