Include abstract and keywords only if they are given

--- a/inst/rmarkdown/templates/pdf_article/resources/template.tex
+++ b/inst/rmarkdown/templates/pdf_article/resources/template.tex
@@ -33,7 +33,7 @@ $if(issue)$
 $else$
 \jdsissue{xx}
 $endif$
-% set doi: FIXME not support underscore
+% set doi: FIXME: not support underscore
 $if(doi)$
 \jdsdoi{$doi$}
 $else$
@@ -72,13 +72,17 @@ $preamble$
 
 \maketitle
 
+$if(abstract)$
 \begin{abstract}
 $abstract$
 \end{abstract}
+$endif$
 
+$if(keywords)$
 \begin{keywords}
 $for(keywords)$$keywords$$sep$; $endfor$.
 \end{keywords}
+$endif$
 
 $body$
 
